# mlir-toy

./: CMakeLists.txt  CMakePresets.json  Dockerfile  Readme.md  entrypoint.sh
chapter1/: CMakeLists.txt
chapter1/include/toy/: AST.h  Parser.h
chapter1/src/: toyc.cpp
chapter1/src/parser/: AST.cpp
chapter2/: CMakeLists.txt
chapter2/include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td
chapter2/src/: toyc.cpp
chapter2/src/mlir/: Dialect.cpp  MLIRGen.cpp
chapter3/: CMakeLists.txt
chapter3/include/toy/: CMakeLists.txt  Ops.td
chapter3/src/: toyc.cpp
chapter3/src/mlir/: Dialect.cpp  MLIRGen.cpp  ToyCombine.cpp
chapter4/: CMakeLists.txt
chapter4/include/toy/: CMakeLists.txt  MLIRGen.h  Passes.h
chapter4/src/: toyc.cpp
chapter4/src/mlir/: Dialect.cpp  MLIRGen.cpp
chapter4/src/parser/: AST.cpp
chapter5/: CMakeLists.txt
chapter5/include/toy/: CMakeLists.txt  Lexer.h  ShapeInferenceInterface.h
chapter5/src/: toyc.cpp
chapter5/src/mlir/: LowerToAffineLoops.cpp
chapter6/: CMakeLists.txt
chapter6/include/toy/: AST.h  CMakeLists.txt  Parser.h  Passes.h  ShapeInferenceInterface.h
chapter6/src/: toyc.cpp
chapter6/src/mlir/: Dialect.cpp  LowerToLLVM.cpp  ShapeInferencePass.cpp
chapter7/: CMakeLists.txt
chapter7/include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  Parser.h
chapter7/src/: toyc.cpp
chapter7/src/mlir/: Dialect.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ToyCombine.cpp
chapter7/src/parser/: AST.cpp
include/toy/: Lexer.h
src/: hello.cpp
